--- a/NuGet.config
+++ b/NuGet.config
@@ -12,6 +12,7 @@
     <!--  Begin: Package sources from dotnet-runtime -->
     <!--  End: Package sources from dotnet-runtime -->
     <!--  Begin: Package sources from dotnet-templating -->
+    <add key="dotnet-templating" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-templating-e73e3001/nuget/v3/index.json" /> 
     <!--  End: Package sources from dotnet-templating -->
     <!--  Begin: Package sources from dotnet-windowsdesktop -->
     <!--  End: Package sources from dotnet-windowsdesktop -->
