--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -2,12 +2,17 @@ trigger:
   batch: true
   branches:
     include:
-    - master
+    - main
+    - release/7.0.3xx
+    - internal/release/*
+
+pr:
+  branches:
+    include:
     - main
     - release/*
-    - internal/release/3.*
-    - internal/release/5.*
-    - internal/release/6.*
+    - internal/release/*
+
 
 variables:
   - name: teamName
