--- a/src/Xunit.NetCore.Extensions/Xunit.NetCore.Extensions.csproj
+++ b/src/Xunit.NetCore.Extensions/Xunit.NetCore.Extensions.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <PackageReference Include="xunit.core" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\Shared\UnitTests\CustomXunitAttributesUtilities.cs" />
+  </ItemGroup>
 </Project>
