Remove the test solution files and update tests

--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
@@ -167,6 +167,7 @@ Copyright (c) .NET Foundation. All rights reserved.
     <NETSdkError Condition="'$(SolutionExt)' == '.sln' and
                             '$(_SolutionLevelPackRelease)' != '$(PackRelease)'"
           ResourceName="SolutionProjectConfigurationsConflict"
-          FormatArguments="PackRelease"/>
+          FormatArguments="PackRelease;$(ProjectName)"/>
   </Target>
+
 </Project>
