Improve test code quality by adding SelfContained in less places where possible (IL Link) and other minor code style improvements from other PR feedback

--- a/src/Assets/TestProjects/BlazorHosted/blazorhosted/blazorhosted.csproj
+++ b/src/Assets/TestProjects/BlazorHosted/blazorhosted/blazorhosted.csproj
@@ -8,7 +8,7 @@
     <ProjectReference Include="..\blazorwasm\blazorwasm.csproj" />
   </ItemGroup>
 
-  <!-- Based on .NET 8 breaking change: Add SC like old behavior if RID is defined. -->
+  <!-- Based on .NET 8 breaking change: Add SelfContained if RuntimeIdentifier is defined to match old behavior.. -->
   <PropertyGroup Condition="'$(RuntimeIdentifier)' != '' and '$(SelfContained)' == ''">
     <SelfContained>true</SelfContained>
   </PropertyGroup>
