--- a/src/Assets/TestProjects/BlazorWasmMinimal/blazorwasm-minimal.csproj
+++ b/src/Assets/TestProjects/BlazorWasmMinimal/blazorwasm-minimal.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
-  <!-- Based on .NET 8 breaking change: Add SC like old behavior if RID is defined. -->
+  <!-- Based on .NET 8 breaking change: Add SelfContained if RuntimeIdentifier is defined to match old behavior.. -->
   <PropertyGroup Condition="'$(RuntimeIdentifier)' != '' and '$(SelfContained)' == ''">
     <SelfContained>true</SelfContained>
   </PropertyGroup>
