--- a/src/Assets/TestProjects/BlazorWasmWithLibrary/blazorwasm/blazorwasm.csproj
+++ b/src/Assets/TestProjects/BlazorWasmWithLibrary/blazorwasm/blazorwasm.csproj
@@ -36,7 +36,7 @@
     <_BlazorBrotliCompressionLevel>NoCompression</_BlazorBrotliCompressionLevel>
   </PropertyGroup>
 
-    <!-- Based on .NET 8 breaking change: Add SC like old behavior if RID is defined. -->
+    <!-- Based on .NET 8 breaking change: Add SelfContained if RuntimeIdentifier is defined to match old behavior.. -->
   <PropertyGroup Condition="'$(RuntimeIdentifier)' != '' and '$(SelfContained)' == ''">
     <SelfContained>true</SelfContained>
   </PropertyGroup>
