--- a/src/Samples/Directory.Build.props
+++ b/src/Samples/Directory.Build.props
@@ -1,9 +1,15 @@
 ﻿<Project>
 
+  <!--This should be before importing parent properties, as it affects the output directory (defined in arcade SDK) -->
   <PropertyGroup>
     <!-- Use Samples subdirectory for samples in output folder -->
     <OutDirName>Samples\$(MSBuildProjectName)</OutDirName>
+  </PropertyGroup>
 
+  <!-- Import parent props -->
+  <Import Project="..\Directory.Build.props"/>
+
+  <PropertyGroup>
     <!-- Don't regulate package versions for samples -->
     <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
     <ImportDirectoryPackagesProps>false</ImportDirectoryPackagesProps>
@@ -11,8 +17,5 @@
     <IsShipping>false</IsShipping>
     <ExcludeFromSourceBuild>true</ExcludeFromSourceBuild>
   </PropertyGroup>
-
-  <!-- Import parent props -->
-  <Import Project="..\Directory.Build.props"/>
 
 </Project>
