--- a/src/Assets/NonRestoredTestProjects/AppThrowingException/App/AppThrowingException.csproj
+++ b/src/Assets/NonRestoredTestProjects/AppThrowingException/App/AppThrowingException.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>$(CurrentTargetFramework)</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>dotnet-throwingtool</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
   </PropertyGroup>
