--- a/eng/dependabot/Packages.props
+++ b/eng/dependabot/Packages.props
@@ -7,6 +7,6 @@
     <PackageReference Update="Verify.Xunit" Version="19.8.0" />
     <PackageReference Update="Verify.DiffPlex" Version="2.1.0" />
     <PackageReference Update="FakeItEasy" Version="7.3.1" />
-    <PackageReference Update=".Sources" Version="1.0.0" />
+    <PackageReference Update="Wcwidth.Sources" Version="1.0.0" />
   </ItemGroup>
 </Project>
