Introduce `exp` prefix in PR to allow better PR review process
MSBuild currenly does this. 
I would like to do this to submit more digestible PRs to a copy of main. This way the changes don't go into main yet and PRs can be done in pieces.
We need to add this so we can trigger CI/CD for this pattern.

Thanks @marcpopMSFT for the pointer.

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -8,6 +8,7 @@ trigger:
     - internal/release/5.*
     - internal/release/6.*
     - internal/release/7.*
+    - exp/*
   paths:
     exclude:
     - "*.md"
