--- a/.vsts-ci-richnav.yml
+++ b/.vsts-ci-richnav.yml
@@ -24,7 +24,7 @@ stages:
         richCodeNavigationLanguage: 'csharp'
         richCodeNavigationEnvironment: 'production'
         pool:
-            name: NetCore-Public
+            name: $(DncEngPublicBuildPool)
             demands: ImageOverride -equals windows.vs2019.amd64.open   
         timeoutInMinutes: 180
         strategy:
