Add the pool provider yml as a variable reference

--- a/.vsts-ci-richnav.yml
+++ b/.vsts-ci-richnav.yml
@@ -12,6 +12,7 @@ variables:
     value: Roslyn-Project-System
   - name: PostBuildSign
     value: true
+  - template: /eng/common/templates/variables/pool-providers.yml
 
 stages:
 - stage: build
