Extract an interface for local daemons, and check for local docker daemon activity. (#319)
* refactor to use ImageReferences everywhere

* add 'isAvailable' check and use in callsites

* Add tests for Docker daemon detection specifically

* better executable logging for failing test

* push to local daemon again

* add simple logger to daemon probe

* use exceptions and log

* more details

* use escaping mechanism that works on all platforms

* invert decision on availability

* correct assertion

* xml documentation

* Apply suggestions from code review

Co-authored-by: Vlada Shubina <vshubina@microsoft.com>

* refactor error message into exception to ensure useful output

* flow through the decision on which local daemon to choose via a MSBuild property

* fix analyzer errors after rebase

---------

Co-authored-by: Vlada Shubina <vshubina@microsoft.com>

--- a/Microsoft.NET.Build.Containers/Microsoft.NET.Build.Containers.csproj
+++ b/Microsoft.NET.Build.Containers/Microsoft.NET.Build.Containers.csproj
@@ -28,7 +28,7 @@
 
   <!-- net472 builds manually import files to compile -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <Compile Remove="*.*" />
+    <Compile Remove="**/*.*" />
     <Compile Include="ReferenceParser.cs" />
     <Compile Include="KnownStrings.cs" />
     <Compile Include="ParseContainerProperties.cs" />
