--- a/src/Assets/TestPackages/BuildTestPackages.targets
+++ b/src/Assets/TestPackages/BuildTestPackages.targets
@@ -1,7 +1,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Test">
 
   <PropertyGroup>
-    <TestPackagesDir>$(ArtifactsTmpDir)testpackages/</TestPackagesDir>
+    <TestPackagesDir>$(TestPackagesRoot)/TestPackages</TestPackagesDir>
   </PropertyGroup>
 
   <Target Name="PrepareTests"
@@ -48,7 +48,7 @@
 
   <Target Name="SetupTestPackageProjectBaseData">
     <ItemGroup>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/PackageWithFakeNativeDep"
+      <BaseTestPackageProject Include="PackageWithFakeNativeDep"
                               Condition="$([MSBuild]::IsOSPlatform(`Windows`))" >
         <Name>PackageWithFakeNativeDep</Name>
         <ProjectName>PackageWithFakeNativeDep.csproj</ProjectName>
@@ -57,7 +57,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-dependency-context-test">
+      <BaseTestPackageProject Include="dotnet-dependency-context-test">
         <Name>dotnet-dependency-context-test</Name>
         <ProjectName>dotnet-dependency-context-test.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -74,7 +74,7 @@
         <Version>$(Version)</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>-->
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-hello/v1/dotnet-hello">
+      <BaseTestPackageProject Include="dotnet-hello/v1/dotnet-hello">
         <Name>dotnet-hello</Name>
         <ProjectName>dotnet-hello.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -82,7 +82,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-hello/v2/dotnet-hello">
+      <BaseTestPackageProject Include="dotnet-hello/v2/dotnet-hello">
         <Name>dotnet-hello</Name>
         <ProjectName>dotnet-hello.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -90,7 +90,7 @@
         <Version>2.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-outputsframeworkversion/dotnet-outputsframeworkversion-netcoreapp1.0">
+      <BaseTestPackageProject Include="dotnet-outputsframeworkversion/dotnet-outputsframeworkversion-netcoreapp1.0">
         <Name>dotnet-outputsframeworkversion-netcoreapp1.0</Name>
         <ProjectName>dotnet-outputsframeworkversion-netcoreapp1.0.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -98,7 +98,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-portable">
+      <BaseTestPackageProject Include="dotnet-portable">
         <Name>dotnet-portable</Name>
         <ProjectName>dotnet-portable.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -106,7 +106,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-portable-v1">
+      <BaseTestPackageProject Include="dotnet-portable-v1">
         <Name>dotnet-portable</Name>
         <ProjectName>dotnet-portable-v1.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -114,7 +114,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-portable-v1-prefercli">
+      <BaseTestPackageProject Include="dotnet-portable-v1-prefercli">
         <Name>dotnet-portable</Name>
         <ProjectName>dotnet-portable-v1-prefercli.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -122,7 +122,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-fallbackfoldertool">
+      <BaseTestPackageProject Include="dotnet-fallbackfoldertool">
         <Name>dotnet-fallbackfoldertool</Name>
         <ProjectName>dotnet-fallbackfoldertool.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -130,7 +130,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/dotnet-prefercliruntime">
+      <BaseTestPackageProject Include="dotnet-prefercliruntime">
         <Name>dotnet-prefercliruntime</Name>
         <ProjectName>dotnet-prefercliruntime.csproj</ProjectName>
         <IsTool>True</IsTool>
@@ -138,7 +138,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/ToolWithOutputName">
+      <BaseTestPackageProject Include="ToolWithOutputName">
         <Name>dotnet-tool-with-output-name</Name>
         <ProjectName>ToolWithOutputName.csproj</ProjectName>
         <NuPkgName>ToolWithOutputName</NuPkgName>
@@ -147,7 +147,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/Library.ContainsAnalyzer">
+      <BaseTestPackageProject Include="Library.ContainsAnalyzer">
         <Name>Library.ContainsAnalyzer</Name>
         <ProjectName>Library.ContainsAnalyzer.csproj</ProjectName>
         <NuPkgName>Library.ContainsAnalyzer</NuPkgName>
@@ -155,7 +155,7 @@
         <Version>1.0.0</Version>
         <Clean>True</Clean>
       </BaseTestPackageProject>
-      <BaseTestPackageProject Include="src/Assets/TestPackages/Library.ContainsAnalyzer2">
+      <BaseTestPackageProject Include="Library.ContainsAnalyzer2">
         <Name>Library.ContainsAnalyzer2</Name>
         <ProjectName>Library.ContainsAnalyzer2.csproj</ProjectName>
         <NuPkgName>Library.ContainsAnalyzer2</NuPkgName>
@@ -169,7 +169,7 @@
       </BaseTestPackageProject>
 
       <BaseTestPackageProject>
-        <ProjectDir>$(RepoRoot)%(Identity)/</ProjectDir>
+        <ProjectDir>$(TestPackagesRoot)/%(Identity)/</ProjectDir>
         <PackageOutput>$(TestPackagesDir)/%(NuPkgName).%(Version).nupkg</PackageOutput>
       </BaseTestPackageProject>
 
