--- a/src/Tasks/Microsoft.NET.Build.Extensions.Tasks/msbuildExtensions-ver/SolutionFile/ImportAfter/Microsoft.NET.Sdk.Solution.targets
+++ b/src/Tasks/Microsoft.NET.Build.Extensions.Tasks/msbuildExtensions-ver/SolutionFile/ImportAfter/Microsoft.NET.Sdk.Solution.targets
@@ -30,7 +30,7 @@ Copyright (c) .NET Foundation. All rights reserved.
 
 
   <Target Name="_CheckForSolutionLevelOutputPath"
-          BeforeTargets="Build;Publish;Clean;Pack;Store;VSTest"
+          BeforeTargets="Build;Publish;Clean;Store;VSTest"
           Condition="'$(_CommandLineDefinedOutputPath)' == 'true'">
 
     <NETSdkError ResourceName="CannotHaveSolutionLevelOutputPath" />
