Downgrade NETSDK1194 to a warning

--- a/src/Tasks/Microsoft.NET.Build.Extensions.Tasks/msbuildExtensions-ver/SolutionFile/ImportAfter/Microsoft.NET.Sdk.Solution.targets
+++ b/src/Tasks/Microsoft.NET.Build.Extensions.Tasks/msbuildExtensions-ver/SolutionFile/ImportAfter/Microsoft.NET.Sdk.Solution.targets
@@ -33,7 +33,7 @@ Copyright (c) .NET Foundation. All rights reserved.
           BeforeTargets="Build;Publish;Clean;Store;VSTest"
           Condition="'$(_CommandLineDefinedOutputPath)' == 'true'">
 
-    <NETSdkError ResourceName="CannotHaveSolutionLevelOutputPath" />
+    <NetSdkWarning ResourceName="CannotHaveSolutionLevelOutputPath" />
 
   </Target>
 
