Exception messages were moved to resource file (#347)

--- a/Microsoft.NET.Build.Containers/Microsoft.NET.Build.Containers.csproj
+++ b/Microsoft.NET.Build.Containers/Microsoft.NET.Build.Containers.csproj
@@ -42,6 +42,8 @@
     <Compile Include="net472Definitions.cs" />
     <Compile Include="VSHostObject.cs" />
     <Compile Include="Port.cs" />
+    <Compile Include="Resources\Resource.cs" />
+    <Compile Include="Resources\Strings.Designer.cs" />
   </ItemGroup>
 
   <!-- core remove files specific to net472 workarounds -->
@@ -49,6 +51,19 @@
     <Compile Remove="Tasks/CreateNewImageToolTask.cs" />
     <Compile Remove="net472Definitions.cs" />
     <Compile Remove="VSHostObject.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
